@@ -2,6 +2,15 @@
 
         Reviewed by Oliver.
 
+        Remove more redundant isSafeScript checks.
+
+        * bindings/js/kjs_window.cpp:
+        (KJS::Window::getOwnPropertySlot):
+
+2007-07-16  Sam Weinig  <sam@webkit.org>
+
+        Reviewed by Oliver.
+
         Turn off -Wshorten-64-to-32 warning for 64-bit builds.
 
         * Configurations/Base.xcconfig:
